--- a/src/plc_control/package.xml
+++ b/src/plc_control/package.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>plc_control</name>
-  <version>0.0.0</version>
-  <description>The plc_control package</description>
+  <version>1.0.0</version>
+  <description>plc_control package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="gmc@todo.todo">gmc</maintainer>
+  <maintainer email="chaiwit.p@groupmaker.co.th">chaiwit.p</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>Apache License Version 2.0</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
