custom msg update

--- a/src/main_control_system/sensor_custom_msgs/CMakeLists.txt
+++ b/src/main_control_system/sensor_custom_msgs/CMakeLists.txt
@@ -57,6 +57,7 @@ add_message_files(
   SensorPLCStamped.msg
   SteeringControl.msg
   SteeringControlStamped.msg
+  EventControl.msg
 )
 
 ## Generate services in the 'srv' folder
