--- a/src/ublox/ublox_gps/config/zed_f9p.yaml
+++ b/src/ublox/ublox_gps/config/zed_f9p.yaml
@@ -1,5 +1,15 @@
 device: /dev/ttyACM0
-frame_id: gps
+frame_id: gps_front
 uart1:
-  baudrate: 38400
-config_on_startup: false
+  baudrate: 115200
+config_on_startup: true
+tmode3: 1                   # Survey-In Mode
+sv_in:
+  reset: True               # True: disables and re-enables survey-in (resets)
+                            # False: Disables survey-in only if TMODE3 is
+                            # disabled
+  min_dur: 300              # Survey-In Minimum Duration [s]
+  acc_lim: 3.0              # Survey-In Accuracy Limit [m]
+
+inf:
+  all: true                   # Whether to display all INF messages in console
