add pkg drive control (communicate)

--- a/src/main_control_system/sensor_custom_msgs/CMakeLists.txt
+++ b/src/main_control_system/sensor_custom_msgs/CMakeLists.txt
@@ -66,6 +66,8 @@ add_message_files(
   DriveMCU3Stamped.msg
   DriveMCU4.msg
   DriveMCU4Stamped.msg
+  DriveVCU.msg
+  DriveVCUStamped.msg
 )
 
 ## Generate services in the 'srv' folder
