custom encoder msg

--- a/src/main_control_system/sensor_custom_msgs/CMakeLists.txt
+++ b/src/main_control_system/sensor_custom_msgs/CMakeLists.txt
@@ -68,6 +68,8 @@ add_message_files(
   DriveMCU4Stamped.msg
   DriveVCU.msg
   DriveVCUStamped.msg
+  SensorEncoderDistan.msg
+  SensorEncoderDistanStemped.msg
 )
 
 ## Generate services in the 'srv' folder
