--- a/src/main_control_system/sensor_custom_msgs/CMakeLists.txt
+++ b/src/main_control_system/sensor_custom_msgs/CMakeLists.txt
@@ -70,6 +70,8 @@ add_message_files(
   DriveVCUStamped.msg
   SensorEncoderDistan.msg
   SensorEncoderDistanStemped.msg
+  VelocityCMD.msg
+  VelocityCMDStamped.msg
 )
 
 ## Generate services in the 'srv' folder
