--- a/src/main_control_system/sensor_custom_msgs/CMakeLists.txt
+++ b/src/main_control_system/sensor_custom_msgs/CMakeLists.txt
@@ -72,6 +72,7 @@ add_message_files(
   SensorEncoderDistanStemped.msg
   VelocityCMD.msg
   VelocityCMDStamped.msg
+  LEDState.msg
 )
 
 ## Generate services in the 'srv' folder
