--- a/src/robot_localization/params/dual_ekf_navsat.yaml
+++ b/src/robot_localization/params/dual_ekf_navsat.yaml
@@ -1,14 +1,13 @@
 # For parameter descriptions, please refer to the template parameter files for each node.
 
 ekf_se_odom:
-  frequency: 30.0
+  frequency: 30
   sensor_timeout: 0.1
-  two_d_mode: true
-  transform_time_offset: 0.1
+  two_d_mode: false
+  transform_time_offset: 0.0
   transform_timeout: 0.0
   print_diagnostics: true
   debug: false
-  publish_tf: true
 
   map_frame: map
   odom_frame: odom
@@ -16,48 +15,27 @@ ekf_se_odom:
   world_frame: odom
 
   odom0: odometry/wheel
-  odom0_config: [true, true, false, #<!-- x, y, z position -->
-                 false, false, false, #<!-- roll, pitch, yaw angles-->
-                 true,  true,  true, #<!-- x/y/z velocity -->
-                 false, false, true, #<!-- roll/pitch/yaw velocity -->
-                 false, false, false] #<!-- Acceleration -->
+  odom0_config: [false, false, false,
+                 false, false, false,
+                 true,  true,  true,
+                 false, false, true,
+                 false, false, false]
   odom0_queue_size: 10
   odom0_nodelay: true
   odom0_differential: false
   odom0_relative: false
 
   imu0: imu/data
-  # imu0_config: [false, false, false,
-  #               true,  true,  false,
-  #               false, false, false,
-  #               true,  true,  true,
-  #               true,  true,  true]
-
   imu0_config: [false, false, false,
+                true,  true,  false,
                 false, false, false,
-                false, false, false,
-                false, false, false,
-                true, true, true]  
-
+                true,  true,  true,
+                true,  true,  true]
   imu0_nodelay: false
   imu0_differential: false
   imu0_relative: false
   imu0_queue_size: 10
-  imu0_remove_gravitational_acceleration: false
-
-  pose0: amcl_pose 
-  pose0_config: [true, true, false,
-                 false,  false,  false,
-                 false, false, false,
-                 false,  false,  false,
-                false,  false,  false]
-  pose1: initialpose
-  pose1_config: [true, true, false,
-                 false,  false,  false,
-                 false, false, false,
-                 false,  false,  false,
-                false,  false,  false]  
-
+  imu0_remove_gravitational_acceleration: true
 
   use_control: false
 
@@ -96,12 +74,11 @@ ekf_se_odom:
 ekf_se_map:
   frequency: 30
   sensor_timeout: 0.1
-  two_d_mode: true
-  transform_time_offset: 0.1
+  two_d_mode: false
+  transform_time_offset: 0.0
   transform_timeout: 0.0
   print_diagnostics: true
   debug: false
-  publish_tf: false
 
   map_frame: map
   odom_frame: odom
@@ -109,7 +86,7 @@ ekf_se_map:
   world_frame: map
 
   odom0: odometry/wheel
-  odom0_config: [true,  true, false,
+  odom0_config: [false, false, false,
                  false, false, false,
                  true,  true,  true,
                  false, false, true,
@@ -130,37 +107,17 @@ ekf_se_map:
   odom1_differential: false
   odom1_relative: false
 
-  imu0: bno055/imu
-  # imu0_config: [false, false, false,
-  #               true,  true,  false,
-  #               false, false, false,
-  #               true,  true,  true,
-  #               true,  true,  true]
-
+  imu0: imu/data
   imu0_config: [false, false, false,
+                true,  true,  false,
                 false, false, false,
-                false, false, false,
-                false, false, false,
-                true, true, true]  
-              
+                true,  true,  true,
+                true,  true,  true]
   imu0_nodelay: true
   imu0_differential: false
   imu0_relative: false
   imu0_queue_size: 10
-  imu0_remove_gravitational_acceleration: false
-
-  pose0: amcl_pose 
-  pose0_config: [true, true, false,
-                 false,  false,  false,
-                 false, false, false,
-                 false,  false,  false,
-                false,  false,  false]
-  pose1: initialpose
-  pose1_config: [true, true, false,
-                 false,  false,  false,
-                 false, false, false,
-                 false,  false,  false,
-                false,  false,  false] 
+  imu0_remove_gravitational_acceleration: true
 
   use_control: false
 
@@ -199,10 +156,11 @@ ekf_se_map:
 navsat_transform:
   frequency: 30
   delay: 3.0
-  magnetic_declination_radians: 0.01308996939  # For lat/long 12.817526147937679, 101.15295253843995
+  magnetic_declination_radians: 0.0429351  # For lat/long 55.944831, -3.186998
   yaw_offset: 1.570796327  # IMU reads 0 facing magnetic north, not east
-  zero_altitude: true
-  broadcast_cartesian_transform: true
+  zero_altitude: false
+  broadcast_utm_transform: true
   publish_filtered_gps: true
   use_odometry_yaw: false
   wait_for_datum: false
+
