--- a/src/cmd_mux_remote/CMakeLists.txt
+++ b/src/cmd_mux_remote/CMakeLists.txt
@@ -161,7 +161,7 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-  scripts/my_python_script
+  scripts/cmd_mux_remote.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
