--- a/src/robot_localization/params/dual_ekf_navsat_outdoor.yaml
+++ b/src/robot_localization/params/dual_ekf_navsat_outdoor.yaml
@@ -43,7 +43,7 @@ ekf_se_odom:
   imu0_differential: false
   imu0_relative: false
   imu0_queue_size: 10
-  imu0_remove_gravitational_acceleration: false
+  imu0_remove_gravitational_acceleration: true
 
   pose0: amcl_pose 
   pose0_config: [true, true, false,
@@ -147,7 +147,7 @@ ekf_se_map:
   imu0_differential: false
   imu0_relative: false
   imu0_queue_size: 10
-  imu0_remove_gravitational_acceleration: false
+  imu0_remove_gravitational_acceleration: true
 
   pose0: amcl_pose 
   pose0_config: [true, true, false,
