--- a/src/navigation/amcl/CMakeLists.txt
+++ b/src/navigation/amcl/CMakeLists.txt
@@ -111,8 +111,8 @@ install(DIRECTORY include/amcl/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
 )
 
-install(DIRECTORY examples/
-    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/examples
+install(DIRECTORY launch/
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
 )
 
 ## Configure Tests
