--- a/src/kubo_launchers/params/costmap_common_params.yaml
+++ b/src/kubo_launchers/params/costmap_common_params.yaml
@@ -47,7 +47,7 @@ obstacle_range: 2.5
 max_obstacle_height: 2.0
 raytrace_range: 3.0
 
-footprint: [[-0.30,-0.275], [0.30,-0.275], [0.30,0.275], [-0.30,0.275]]
+footprint: [[-1.204, -1.818], [-1.204,1.818], [5.397,1.818], [5.397, -1.818]]
 footprint_padding: 0.0
 
 inscribed_radius: 0.2
