--- a/src/kubo_launchers/CMakeLists.txt
+++ b/src/kubo_launchers/CMakeLists.txt
@@ -191,6 +191,11 @@ include_directories(
 #   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 # )
 
+install(
+  DIRECTORY launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
 #############
 ## Testing ##
 #############
