--- a/src/kubo_launchers/params/base_local_planner_params.yaml
+++ b/src/kubo_launchers/params/base_local_planner_params.yaml
@@ -39,6 +39,8 @@ TebLocalPlannerROS:
 
    vertices: [[-1.204, -1.818], [-1.204,1.818], [5.397,1.818], [5.397, -1.818]]
 
+  #  vertices: [[-1.204, -1.918], [-1.204,1.918], [5.397,1.918], [5.397, -1.918]]
+
  # GoalTolerance
     
  xy_goal_tolerance: 0.25
@@ -99,7 +101,6 @@ TebLocalPlannerROS:
  selection_obst_cost_scale: 1.0
  selection_prefer_initial_plan: 0.95
  selection_viapoint_cost_scale: 1.0
- selection_alternative_time_cost: false
  roadmap_graph_no_samples: 15
  roadmap_graph_area_width: 5.0
  h_signature_prescaler: 0.5
