--- a/src/robot_localization/params/dual_ekf_navsat_outdoor.yaml
+++ b/src/robot_localization/params/dual_ekf_navsat_outdoor.yaml
@@ -23,7 +23,7 @@ ekf_se_odom:
                  false, false, false] #<!-- Acceleration -->
   odom0_queue_size: 10
   odom0_nodelay: true
-  odom0_differential: false
+  odom0_differential: true
   odom0_relative: false
 
   imu0: bno055/imu
