--- a/src/kubo_launchers/params/base_local_planner_params.yaml
+++ b/src/kubo_launchers/params/base_local_planner_params.yaml
@@ -1,22 +1,27 @@
 TebLocalPlannerROS:
-
- odom_topic: odom
+ odom_topic: odometry/filtered
 #  map_frame: /odom
     
  # Trajectory
   
  teb_autosize: true
- dt_ref: 0.4
+ dt_ref: 0.2
  dt_hysteresis: 0.1
  global_plan_overwrite_orientation: false
  allow_init_with_backwards_motion: true
- max_global_plan_lookahead_dist: 40.0
+ max_global_plan_lookahead_dist: 10.0
  feasibility_check_no_poses: 5
  global_plan_viapoint_sep: 0.5
  global_plan_prune_distance: 2.0
     
  # Robot
-         
+ # Note: I added these parameters to help on the real robot (not needed in simulation)
+ min_vel_x: 0.0 
+ min_vel_y: 0.0
+ min_vel_theta: 0
+ min_vel_x_backwards: 0.0
+
+ # Note: the real robot
  max_vel_x: 0.8 #0.4
  max_vel_x_backwards: 0.8 #0.2
  max_vel_theta: 0.01 #0.3
@@ -49,7 +54,7 @@ TebLocalPlannerROS:
     
  # Obstacles
     
- min_obstacle_dist: 2.0 #0.5
+ min_obstacle_dist: 0.8 #0.5 ตั้งไว้ที่ระยะ 1 เมตร หุ่นยนต์จะพยายามรักษาระยะห่างอย่างน้อย 1 เมตรจากแต่ละด้าน
  inflation_dist: 2.3 #0.6 inflation_dist > min_obstacle_dist
  dynamic_obstacle_inflation_dist: 0.3 #0.5 
  include_costmap_obstacles: true
@@ -85,7 +90,7 @@ TebLocalPlannerROS:
  weight_acc_lim_theta: 1.0 #50.0
  weight_kinematics_nh: 1000.0
  weight_kinematics_forward_drive: 0.1
- weight_kinematics_turning_radius: 1.0
+ weight_kinematics_turning_radius: 1.0 #Optimization weight for enforcing a minimum turning radius (only for carlike robots)
  weight_optimaltime: 2.0 # must be > 0 การเปลี่ยนเส้นทาง/เวลาดำเนินการ
  weight_obstacle: 100.0 #50.0 การรักษาระยะห่างขั้นต่ำจากสิ่งกีดขวาง
  selection_alternative_time_cost: false # not in use yet
