--- a/src/kubo_launchers/params/base_local_planner_params.yaml
+++ b/src/kubo_launchers/params/base_local_planner_params.yaml
@@ -16,16 +16,16 @@ TebLocalPlannerROS:
     
  # Robot
  # Note: I added these parameters to help on the real robot (not needed in simulation)
- min_vel_x: 0.0 
+ min_vel_x: 0.2 
  min_vel_y: 0.0
  min_vel_theta: 0
- min_vel_x_backwards: 0.0
+ min_vel_x_backwards: 0.2
 
  # Note: the real robot
- max_vel_x: 0.8 #0.4
- max_vel_x_backwards: 0.8 #0.2
- max_vel_theta: 0.01 #0.3
- acc_lim_x: 0.8 #0.5
+ max_vel_x: 0.6 #0.4
+ max_vel_x_backwards: 0.6 #0.2
+ max_vel_theta: 0.36 #0.3
+ acc_lim_x: 1.2 #0.5
  acc_lim_y: 0.0
  acc_lim_theta: 0.01 #0.5
  min_turning_radius: 6.44
@@ -42,7 +42,8 @@ TebLocalPlannerROS:
   #  rear_radius: 0.2 # for type "two_circles"
   #  vertices: [ [0.25, -0.05], [0.18, -0.05], [0.18, -0.18], [-0.19, -0.18], [-0.25, 0], [-0.19, 0.18], [0.18, 0.18], [0.18, 0.05], [0.25, 0.05] ] # for type "polygon"
 
-   vertices: [[-1.204, -1.818], [-1.204,1.818], [5.397,1.818], [5.397, -1.818]]
+  #  vertices: [[-1.204, -1.818], [-1.204,1.818], [5.397,1.818], [5.397, -1.818]]
+   vertices: [[-3.25, -1.4], [-3.25,1.4], [3.25,1.4], [3.25, -1.4]]
 
   #  vertices: [[-1.204, -1.918], [-1.204,1.918], [5.397,1.918], [5.397, -1.918]]
 
