--- a/src/kubo_launchers/params/local_costmap_params.yaml
+++ b/src/kubo_launchers/params/local_costmap_params.yaml
@@ -15,7 +15,8 @@ local_costmap:
   obstacle_range : 10.0 #3.5
   raytrace_range : 15.0 #5.0
   # footprint: [[-1.204, -1.918], [-1.204,1.918], [5.397,1.918], [5.397, -1.918]]
-  footprint: [[-1.204, -1.818], [-1.204,1.818], [5.397,1.818], [5.397, -1.818]]
+#   footprint: [[-1.204, -1.818], [-1.204,1.818], [5.397,1.818], [5.397, -1.818]]
+  footprint: [[-3.25, -1.4], [-3.25,1.4], [3.25,1.4], [3.25, -1.4]]
 
 
   footprint_padding: 0.0
