--- a/src/kubo_launchers/params/local_costmap_params.yaml
+++ b/src/kubo_launchers/params/local_costmap_params.yaml
@@ -16,7 +16,7 @@ local_costmap:
   raytrace_range : 15.0 #5.0
   # footprint: [[-1.204, -1.918], [-1.204,1.918], [5.397,1.918], [5.397, -1.918]]
 #   footprint: [[-1.204, -1.818], [-1.204,1.818], [5.397,1.818], [5.397, -1.818]]
-  footprint: [[-0.30,-0.275], [0.30,-0.275], [0.30,0.275], [-0.30,0.275]]
+  footprint: [[-1.204, -1.818], [-1.204,1.818], [5.397,1.818], [5.397, -1.818]]
 
 
   footprint_padding: 0.0
