--- a/src/ray_filter_ground/package.xml
+++ b/src/ray_filter_ground/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>ray_filter_ground</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>The ray_filter_ground package</description>
 
 
-  <maintainer email="suyun_zheng@163.com">s</maintainer>
+  <maintainer email="chaiwit.p@groupmaker.co.th">s</maintainer>
 
-  <license>TODO</license>
+  <license>Apache 2</license>
 
 
   <buildtool_depend>catkin</buildtool_depend>
