--- a/src/rslidar_sdk/config/config_bak.yaml
+++ b/src/rslidar_sdk/config/config_bak.yaml
@@ -12,29 +12,29 @@ common:
   pcap_path: /home/robosense/lidar.pcap                 #The path of pcap file
 
 
-lidar:   
+lidar:
 # 10.1.100.9
   - driver:
       lidar_type: RS16            #LiDAR type - RS16, RS32, RSBP, RS128, RS80, RSM1, RSHELIOS
       frame_id: rslidar_front           #Frame id of message
       msop_port: 9966              #Msop port of lidar
       difop_port: 8877             #Difop port of lidar
-      start_angle: 270             #Start angle of point cloud
-      end_angle: 180               #End angle of point cloud 
+      start_angle: 273               #Start angle of point cloud
+      end_angle: 173.5            	#End angle of point cloud 177.5
       min_distance: 0.2            #Minimum distance of point cloud
-      max_distance: 150            #Maximum distance of point cloud
+      max_distance: 150.0            #Maximum distance of point cloud
       use_lidar_clock: false       #True--Use the lidar clock as the message timestamp
-                                   #False-- Use the system clock as the timestamp
+                                   #False-- Use the system clock as the timestamp  
       x: 0.0
       y: 0.0
       z: 0.0
-      roll: 3.14
+      roll: 0.0
       pitch: 0.0
-      yaw: 0.0                                    
+      yaw: 0.0                               
     ros:
       ros_recv_packet_topic: /front/rslidar_packets          #Topic used to receive lidar packets from ROS
       ros_send_packet_topic: /front/rslidar_packets          #Topic used to send lidar packets through ROS
-      ros_send_point_cloud_topic: /front/rslidar_points      #Topic used to send point cloud through ROS
+      ros_send_point_cloud_topic: /rslidar_points/front      #Topic used to send point cloud through ROS
     proto:
       point_cloud_recv_port: 60021                     #Port number used for receiving point cloud 
       point_cloud_send_port: 60021                     #Port number which the point cloud will be send to
@@ -43,17 +43,16 @@ lidar:
       difop_recv_port: 60023                           #Port number used for receiving lidar difop packets
       difop_send_port: 60023                           #Port number which the difop packets will be send to 
       point_cloud_send_ip: 127.0.0.1                   #Ip address which the point cloud will be send to 
-      packet_send_ip: 127.0.0.1                        #Ip address which the lidar packets will be send to      
-
+      packet_send_ip: 127.0.0.1                        #Ip address which the lidar packets will be send to
       
 # 10.1.100.10
   - driver:
       lidar_type: RS16            #LiDAR type - RS16, RS32, RSBP, RS128, RS80, RSM1, RSHELIOS
-      frame_id: rslidar_back       #Frame id of message
+      frame_id: rslidar_back           #Frame id of message
       msop_port: 6699              #Msop port of lidar
       difop_port: 7788             #Difop port of lidar
-      start_angle: 270             #Start angle of point cloud
-      end_angle: 180               #End angle of point cloud 
+      start_angle: 273 #271               #Start angle of point cloud
+      end_angle: 173.5 #178.5              #End angle of point cloud 
       min_distance: 0.2            #Minimum distance of point cloud
       max_distance: 150            #Maximum distance of point cloud
       use_lidar_clock: false       #True--Use the lidar clock as the message timestamp
@@ -61,13 +60,13 @@ lidar:
       x: 0.0
       y: 0.0
       z: 0.0
-      roll: 3.14
+      roll: 0.0
       pitch: 0.0
-      yaw: 3.14                                    
+      yaw: 0.0                                     
     ros:
       ros_recv_packet_topic: /back/rslidar_packets          #Topic used to receive lidar packets from ROS
       ros_send_packet_topic: /back/rslidar_packets          #Topic used to send lidar packets through ROS
-      ros_send_point_cloud_topic: /back/rslidar_points      #Topic used to send point cloud through ROS
+      ros_send_point_cloud_topic: /rslidar_points/back      #Topic used to send point cloud through ROS
     proto:
       point_cloud_recv_port: 60024                     #Port number used for receiving point cloud 
       point_cloud_send_port: 60024                     #Port number which the point cloud will be send to
