--- a/src/launchers/robot/kubo/params/dual_ekf_navsat_outdoor.yaml
+++ b/src/launchers/robot/kubo/params/dual_ekf_navsat_outdoor.yaml
@@ -8,7 +8,7 @@ ekf_se_odom:
   transform_timeout: 0.0
   print_diagnostics: true
   debug: false
-  publish_tf: true
+  publish_tf: false
 
   map_frame: map
   odom_frame: odom
@@ -26,7 +26,7 @@ ekf_se_odom:
   odom0_differential: true
   odom0_relative: false
 
-  imu0: bno055/imu
+  imu0: imu/data
   imu0_config: [false, false, false,
                 true,  true,  false,
                 false, false, false,
@@ -45,12 +45,12 @@ ekf_se_odom:
   imu0_queue_size: 10
   imu0_remove_gravitational_acceleration: false
 
-  pose0: amcl_pose 
-  pose0_config: [true, true, false,
-                 false,  false,  false,
-                 false, false, false,
-                 false,  false,  false,
-                false,  false,  false]
+  # pose0: amcl_pose 
+  # pose0_config: [true, true, false,
+  #                false,  false,  false,
+  #                false, false, false,
+  #                false,  false,  false,
+  #               false,  false,  false]
 
   # pose1: initialpose
   # pose1_config: [true, true, false,
@@ -109,34 +109,48 @@ ekf_se_map:
   base_link_frame: base_link
   world_frame: map
 
-  odom0: odometry/wheel
-  odom0_config: [false, false, false,
+  # odom0: odometry/wheel
+  # odom0_config: [false, false, false,
+  #                false, false, false,
+  #                true,  true,  true,
+  #                false, false, true,
+  #                false, false, false]
+  # odom0_queue_size: 10
+  # odom0_nodelay: true
+  # odom0_differential: true
+  # odom0_relative: false
+
+  odom0: odometry/gps
+  odom0_config: [true,  true,  false,
                  false, false, false,
-                 true,  true,  true,
-                 false, false, true,
+                 false, false, false,
+                 false, false, false,
                  false, false, false]
   odom0_queue_size: 10
   odom0_nodelay: true
-  odom0_differential: true
+  odom0_differential: false
   odom0_relative: false
 
-  odom1: odometry/gps
+  odom1: odom_rf2o/front
   odom1_config: [true,  true,  false,
-                 false, false, false,
-                 false, false, false,
-                 false, false, false,
-                 false, false, false]
-  odom1_queue_size: 10
-  odom1_nodelay: true
-  odom1_differential: false
-  odom1_relative: false
-
-  imu0: bno055/imu
-  imu0_config: [false, false, false,
-                true,  true,  false,
+                false, false, true,
+                true, true, true,
                 false, false, false,
-                true,  true,  true,
-                true,  true,  true]
+                true, true, true]
+
+  odom2: odom_rf2o/rear
+  odom2_config: [true,  true,  false,
+                false, false, true,
+                true, true, true,
+                false, false, false,
+                true, true, true]
+
+  # imu0: imu/data
+  # imu0_config: [false, false, false,
+  #               true,  true,  false,
+  #               false, false, false,
+  #               true,  true,  true,
+  #               true,  true,  true]
 
   # imu0_config: [false, false, false,
   #               false, false, false,
@@ -144,18 +158,25 @@ ekf_se_map:
   #               false, false, false,
   #               true, true, true]  
               
-  imu0_nodelay: true
-  imu0_differential: true
-  imu0_relative: false
-  imu0_queue_size: 10
-  imu0_remove_gravitational_acceleration: false
+  # imu0_nodelay: true
+  # imu0_differential: true
+  # imu0_relative: false
+  # imu0_queue_size: 10
+  # imu0_remove_gravitational_acceleration: false
 
-  pose0: amcl_pose 
+  pose0: scan_matcher_pose
   pose0_config: [true, true, false,
+                 false,  false,  true,
+                 false, false,   false,
                  false,  false,  false,
+                 false,  false,  false]
+
+  pose1: amcl_pose 
+  pose1_config: [true, true, false,
+                 false,  false,  true,
                  false, false, false,
                  false,  false,  false,
-                false,  false,  false]
+                 false,  false,  false]
                 
   # pose1: initialpose
   # pose1_config: [true, true, false,
@@ -163,6 +184,7 @@ ekf_se_map:
   #                false, false, false,
   #                false,  false,  false,
   #               false,  false,  false] 
+
 
   use_control: false
 
