--- a/src/launchers/robot/kubo/params/dual_ekf_navsat_outdoor.yaml
+++ b/src/launchers/robot/kubo/params/dual_ekf_navsat_outdoor.yaml
@@ -8,7 +8,7 @@ ekf_se_odom:
   transform_timeout: 0.0
   print_diagnostics: true
   debug: false
-  publish_tf: false
+  publish_tf: true
 
   map_frame: map
   odom_frame: odom
@@ -17,8 +17,8 @@ ekf_se_odom:
 
   odom0: odometry/wheel
   odom0_config: [false, false, false, #<!-- x, y, z position -->
-                 false, false, false, #<!-- roll, pitch, yaw angles-->
-                 true,  true,  true, #<!-- x/y/z velocity -->
+                 false, false, true, #<!-- roll, pitch, yaw angles-->
+                 true,  false, false, #<!-- x/y/z velocity -->
                  false, false, true, #<!-- roll/pitch/yaw velocity -->
                  false, false, false] #<!-- Acceleration -->
   odom0_queue_size: 10
@@ -27,11 +27,11 @@ ekf_se_odom:
   odom0_relative: false
 
   imu0: imu/data
-  imu0_config: [false, false, false,
-                true,  true,  false,
-                false, false, false,
-                true,  true,  true,
-                true,  true,  true]
+  imu0_config: [false, false,  false,
+                true,  false,  true,
+                true,  false,  true,
+                false, false,  false,
+                true,  false,  true]
 
   # imu0_config: [false, false, false,
   #               false, false, false,
@@ -163,10 +163,16 @@ ekf_se_map:
   # imu0_relative: false
   # imu0_queue_size: 10
   # imu0_remove_gravitational_acceleration: false
+  twist0: ublox_gps/fix_velocity
+  twist0_config: [false, false, false, #<!-- x, y, z position -->
+                 false, false, false, #<!-- roll, pitch, yaw angles-->
+                 true,  true,  true, #<!-- x/y/z velocity -->
+                 false, false, false, #<!-- roll/pitch/yaw velocity -->
+                 false, false, false] #<!-- Acceleration -->
 
   pose0: scan_matcher_pose
-  pose0_config: [true, true, false,
-                 false,  false,  true,
+  pose0_config: [true, true,   false,
+                 false, false,  true,
                  false, false,   false,
                  false,  false,  false,
                  false,  false,  false]
