--- a/src/launchers/robot/kubo/params/dual_ekf_navsat_outdoor.yaml
+++ b/src/launchers/robot/kubo/params/dual_ekf_navsat_outdoor.yaml
@@ -1,7 +1,7 @@
 # For parameter descriptions, please refer to the template parameter files for each node.
 
 ekf_se_odom:
-  frequency: 100.0
+  frequency: 100
   sensor_timeout: 0.1
   two_d_mode: true
   transform_time_offset: 0.1
@@ -16,9 +16,9 @@ ekf_se_odom:
   world_frame: odom
 
   odom0: odometry/wheel
-  odom0_config: [true,  true, false, #<!-- x, y, z position -->
+  odom0_config: [true,  true,  false, #<!-- x, y, z position -->
                  false, false, true, #<!-- roll, pitch, yaw angles-->
-                 true,  false, false, #<!-- x/y/z velocity -->
+                 true,  true, false, #<!-- x/y/z velocity -->
                  false, false, true, #<!-- roll/pitch/yaw velocity -->
                  false, false, false] #<!-- Acceleration -->
   odom0_queue_size: 10
@@ -27,17 +27,17 @@ ekf_se_odom:
   odom0_relative: false
 
   imu0: imu/data
-  imu0_config: [false, false,  false,
-                true,  false,  true,
-                true,  false,  true,
-                false, false,  false,
-                true,  false,  true]
+  imu0_config: [false, false, false,
+                false, false, true,
+                true,  true,  false,
+                false, false, true,
+                true,  true,  true]
 
-  imu0_nodelay: false
+  imu0_nodelay: true
   imu0_differential: true
   imu0_relative: false
   imu0_queue_size: 10
-  imu0_remove_gravitational_acceleration: false
+  imu0_remove_gravitational_acceleration: true
 
   use_control: false
 
@@ -74,7 +74,7 @@ ekf_se_odom:
                                 0,    0,    0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    1.0]
 
 ekf_se_map:
-  frequency: 30
+  frequency: 100
   sensor_timeout: 0.1
   two_d_mode: true
   transform_time_offset: 0.1
@@ -112,10 +112,10 @@ ekf_se_map:
 
   odom2: odom_rf2o/rear
   odom2_config: [true,  true,  false,
-                false, false, true,
-                true, true, true,
-                false, false, false,
-                true, true, true]
+                 false, false, true,
+                 true,  true,  true,
+                 false, false, false,
+                 true,  true,  true]
 
   odom2_queue_size: 10
   odom2_nodelay: true
@@ -124,24 +124,36 @@ ekf_se_map:
 
   twist0: ublox_gps/fix_velocity
   twist0_config: [false, false, false, #<!-- x, y, z position -->
-                 false, false, false, #<!-- roll, pitch, yaw angles-->
-                 true,  true,  true, #<!-- x/y/z velocity -->
-                 false, false, false, #<!-- roll/pitch/yaw velocity -->
-                 false, false, false] #<!-- Acceleration -->
+                  false, false, false, #<!-- roll, pitch, yaw angles-->
+                  true,  true,  true, #<!-- x/y/z velocity -->
+                  true,  true,  true, #<!-- roll/pitch/yaw velocity -->
+                  false, false, false] #<!-- Acceleration -->
+  twist0_queue_size: 10
+  twist0_nodelay: true
+  twist0_differential: true
+  twist0_relative: false
 
-  pose0: scan_matcher_pose
-  pose0_config: [true, true,   false,
+  pose0: scan_matcher_pose_stamped
+  pose0_config: [false, false,  false,
                  false, false,  true,
-                 false, false,   false,
-                 false,  false,  false,
-                 false,  false,  false]
+                 false, false,  false,
+                 true,  true,   true,
+                 false, false,  false]
+  pose0_queue_size: 10
+  pose0_nodelay: true
+  pose0_differential: true
+  pose0_relative: false
 
-  pose1: amcl_pose 
-  pose1_config: [true, true, false,
-                 false,  false,  true,
-                 false, false, false,
-                 false,  false,  false,
-                 false,  false,  false]
+  # pose1: amcl_pose 
+  # pose1_config: [true,  true,   false,
+  #                false, false,  true,
+  #                false, false,  false,
+  #                true,  true,   true,
+  #                false, false,  false]
+  # pose1_queue_size: 10
+  # pose1_nodelay: true
+  # pose1_differential: true
+  # pose1_relative: false
 
   use_control: false
 
@@ -178,10 +190,10 @@ ekf_se_map:
                                 0,    0,    0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    1.0]
 
 navsat_transform:
-  frequency: 30
+  frequency: 100
   delay: 3.0
   magnetic_declination_radians: 0.01308996939  # For lat/long 12.817526147937679, 101.15295253843995
-  yaw_offset: 1.570796327  # IMU reads 0 facing magnetic north, not east
+  yaw_offset: 0.0  # IMU reads 0 facing magnetic north, not east
   zero_altitude: true
   broadcast_cartesian_transform: true
   publish_filtered_gps: true
