--- a/src/launchers/robot/kubo/params/sbpl/mpc_local_planner_params.yaml
+++ b/src/launchers/robot/kubo/params/sbpl/mpc_local_planner_params.yaml
@@ -7,7 +7,7 @@ MpcLocalPlannerROS:
     type: "simple_car"
     simple_car:
       wheelbase: 0.4
-      front_wheel_driving: False
+      front_wheel_driving: True
       max_vel_x: 0.4
       max_vel_x_backwards: 0.2
       max_steering_angle: 1.4
