--- a/src/launchers/robot/kubo/params/dual_ekf_navsat_outdoor.yaml
+++ b/src/launchers/robot/kubo/params/dual_ekf_navsat_outdoor.yaml
@@ -8,7 +8,7 @@ ekf_se_odom:
   transform_timeout: 0.0
   print_diagnostics: true
   debug: false
-  publish_tf: true
+  publish_tf: false
 
   map_frame: map
   odom_frame: odom
